--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Atkinson Hyperlegible Next", serif;
 }
 body {
 
@@ -9,15 +10,47 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+button:hover {
+    opacity: 0.6;
+}
+
+li {
+    color: red;
+}
 .main {
     display: flex;
     top: 90px;
     gap: 30px;
     position: relative;
     width: 700px;
-    height: 400px;
     border: 10px solid #fd9ed0;
     border-radius: 30px;
+    
+}
+
+.intro-content {
+    display: block;
+}
+
+.date-content {
+    display: none;
+}
+
+.images-content {
+    display: none;
+}
+
+.message {
+    display: none;
+}
+
+/* Intro Section */
+.intro-content {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 30px;
+    margin-right: 30px;
 }
 
 .img-content {
@@ -27,7 +60,8 @@ body {
     height: 345px;
     width: 407px;
     top: 20px;
-    left: 30px;
+    left: 10px;
+    margin-bottom: 25px;
 }
 
 .img-container {
@@ -37,10 +71,16 @@ body {
     width: 180px;
 }
 
-.img-content img {
-    max-width: 100%;
-    height: auto;
-    display: block;
+
+.img-container {
+    overflow: hidden;
+}
+
+.img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
     border-radius: 20px;
 }
 
@@ -53,6 +93,310 @@ body {
     top: 20px;
     height: 345px;
     width: 100%;
-    border: 1px solid red;
     margin-right: 20px;
+}
+
+.header {
+    position: relative;
+    top: 10px;
+    background-color: #fd9ed0;
+    padding: 20px;
+    border-radius: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    
+}
+
+.input {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 19px;
+}
+
+.input input {
+    padding: 8px;
+    border-radius: 10px;
+    border: 2px solid #fd9ed0;
+    outline: none;
+    text-align: center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.input input:focus {
+    border-color: #fd9ed0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
+.btn-container {
+    display: grid;
+    place-items: center;
+    gap: 10px;
+    grid-template-columns: auto auto auto;
+    padding: 30px 10px 10px 10px;
+}
+
+.btn-container button {
+    
+    width: 50px;
+    height: 30px;
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+    background-color: #fd9ed0;
+
+}
+
+.btn-confirm {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-confirm button {
+    position: relative;
+    top: 10px;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
+    background-color: #fd9ed0;
+    cursor: pointer;
+}
+
+
+.header-question {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 20px 0px 20px;
+    width: 639px;
+    height: 60px;
+    
+}
+
+.question-container {
+    border-radius: 15px;
+    padding: 15px;
+    background-color: #fd9ed0;
+    color: white;
+}
+
+.date-section {
+    width: 639px;
+    margin: 0px 20px 0px 20px;
+    height: 220px;
+    padding: 20px;
+}
+
+#yrs-months {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 800;
+    color: rgb(189, 62, 62);
+}
+
+#dys-hrs-mins-secs {
+    display: grid;
+    align-items: center;
+    margin-top: 20px;
+    height: 80px;
+}
+
+
+
+#dys-hrs-mins-secs .time {
+    display: grid;
+    place-content: center;
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px;
+    height: 60px;
+    font-size: 29px;
+    font-weight: bold;
+    color: #c6699b;
+}
+
+#dys-hrs-mins-secs .labels {
+    display: grid;
+    place-content: center;
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px;
+    height: 60px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #c6699b;
+    
+}
+
+span {
+    display: flex;
+    justify-content: center;
+}
+
+.memories-btn-container {
+    display: flex;
+    justify-content: center;
+    width: 639px;
+    margin: 0px 20px 0px 20px;
+    height: 40px;
+}
+
+.memories-btn-container button {
+    width: 200px;
+    background-color: #fd9ed0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    color: white;
+}
+
+.heart-container {
+    display: flex;
+    justify-content: center;
+    width: 639px;
+    margin: 5px 20px 20px 20px;
+    color: rgb(189, 62, 62);
+}
+
+
+/* Image Section */
+
+.frame {
+    width: 639px;
+    margin: 0px 20px 0px 20px;
+    background: white;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 5px;
+    padding-bottom: 10px;
+    
+}
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.square img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+    transition: 1s ease;
+}
+
+.square img:hover{
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(2.2);
+    transition: 1s ease-in-out;
+    z-index: 1;
+    cursor: pointer;
+    }
+
+.images-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 639px;
+    height: 40px;
+    margin: 5px 20px 5px 20px;
+}
+
+.images-header div {
+    background-color: #c6699b;
+    color: white;
+    padding: 5px 15px 5px 15px;
+    border-radius: 20px;
+}
+
+.frame-footer {
+
+    width: 639px;
+    margin: 20px;
+    padding: 5px 20px 5px 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.frame-footer div button {
+    padding: 10px 20px 10px 20px;
+    background-color: #fd9ed0;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    
+}
+
+/* Message Section */
+
+.icons-holder {
+    width: 639px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 40px 20px 0px 20px;
+    color: rgb(236, 93, 93);
+    
+}
+
+.message-content {
+    display: grid;
+    text-align: center;
+    width: 639px;
+    margin: 0px 20px 0px 20px;
+    padding: 0px 30px 0px 30px;
+    color: rgb(231, 76, 49);
+    font-weight: 600;
+    gap: 20px;
+}
+
+
+
+.greetings {
+    width: 639px;
+    height: 70px;
+    display: flex;
+    margin: 0px 20px 0px 20px;
+    justify-content: center;
+    align-items: center;
+    color: rgb(236, 93, 93);
+    font-weight: 800;
+}
+
+.back-btn {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    width: 639px;
+    margin: 0px 20px 20px 20px;
+
+}
+
+.back-btn button {
+    margin-left: 30px;
+    width: 190px;
+    padding: 5px;
+    background-color: #fd9ed0;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    
 }
